--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\admin\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+  "python.pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\tensorflow\\python.exe"
 }
